--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,3 +63,11 @@ add_executable(04wanquan_beibao_better 14_class/04wanquan_beibao_better.cpp)
 add_executable(05wanquan_beibao_best 14_class/05wanquan_beibao_best.cpp)
 add_executable(06dochong_beibao 14_class/06dochong_beibao.cpp)
 add_executable(07duochong_beibao_better 14_class/07duochong_beibao_better.cpp)
+add_executable(08fenzu_beibao 14_class/08fenzu_beibao.cpp)
+add_executable(01shuzi_sanjiaoxing 15_class/01shuzi_sanjiaoxing.cpp)
+add_executable(00shuzi_sanjiaoxing 15_class/00shuzi_sanjiaoxing.cpp)
+add_executable(02zuichang_shangshengzixulie 15_class/02zuichang_shangshengzixulie.cpp)
+add_executable(03zuichang_shangshengzixulie 15_class/03zuichang_shangshengzixulie.cpp)
+add_executable(04zuichang_gonggongzixulie 15_class/04zuichang_gonggongzixulie.cpp)
+add_executable(05shizi_hebing 15_class/05shizi_hebing.cpp)
+add_executable(01zhengshu_huafen _week8/01zhengshu_huafen.cpp)
